--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "dev": "vitepress",
-    "build": "vitepress build",
+    "docs:build": "vitepress build",
     "serve": "vitepress serve",
     "preinstall": "npx only-allow pnpm"
   },
