--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - run: yarn install
+      - run: yarn install --ignore-scripts
 
       - name: Build
         run: yarn docs:build
